# EBA-aula01-para-casa

./: README.md  pyproject.toml
data/: mkt_data.xlsx
notebooks/: ifood_gabarito.ipynb
